@startuml

together {
    class AbstractFactory
    class Factory1
    class Factory2
}
together {
    class AbstractProductA
    class AbstractProductB
    class ProductA1
    class ProductA2
    class ProductB1
    class ProductB2

}
AbstractFactory <|-- Factory1
AbstractFactory <|-- Factory2
AbstractFactory : createProductA()
AbstractFactory : createProductB()
Factory1 : createProductA()
Factory1 : createProductB()
Factory2 : createProductA()
Factory2 : createProductB()
AbstractProductA <|-- ProductA1
AbstractProductA <|-- ProductA2
AbstractProductB <|-- ProductB1
AbstractProductB <|-- ProductB2
Factory1 ..> ProductA1
Factory1 ..> ProductB1
Factory2 ..> ProductA2
Factory2 ..> ProductB2
client --> AbstractProductA
client --> AbstractProductB
client --> AbstractFactory
@enduml